# ChangeLog for dev-perl/PDL
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/PDL/ChangeLog,v 1.80 2009/01/01 18:54:31 armin76 Exp $

  01 Jan 2009; Raúl Porcel <armin76@gentoo.org> PDL-2.4.3-r1.ebuild,
  PDL-2.4.4.ebuild:
  Re-add ~s390

  09 Dec 2008; Torsten Veller <tove@gentoo.org> +files/PDL-2.4.4-PIC.patch,
  PDL-2.4.4.ebuild:
  Update PIC patch (#250335)

*PDL-2.4.4 (08 Dec 2008)

  08 Dec 2008; Robin H. Johnson <robbat2@gentoo.org> +PDL-2.4.4.ebuild:
  Version bump.

  06 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  11 Sep 2007; Jeroen Roovers <jer@gentoo.org> -files/gsl.patch,
  PDL-2.4.3-r1.ebuild:
  Fix automagic, clean up ebuild, add TODOs.

  11 Sep 2007; Jeroen Roovers <jer@gentoo.org> +files/PDL-2.4.3-PIC.patch,
  PDL-2.4.3-r1.ebuild:
  Turn sed script into patch (bug #180807).

  11 Sep 2007; Jeroen Roovers <jer@gentoo.org> PDL-2.4.3-r1.ebuild:
  Fix bug #180807. Stable for HPPA too.

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> PDL-2.4.3-r1.ebuild:
  Stable on ppc.

  09 Aug 2007; Raúl Porcel <armin76@gentoo.org> PDL-2.4.3-r1.ebuild:
  alpha stable

  13 Jul 2007; Raúl Porcel <armin76@gentoo.org> PDL-2.4.3-r1.ebuild:
  ia64/x86 stable

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org> PDL-2.4.3-r1.ebuild:
  Marking sparc stable

  21 Jun 2007; Raúl Porcel <armin76@gentoo.org> PDL-2.4.3-r1.ebuild:
  Re-add ~alpha wrt #165651

  15 Jun 2007; Michael Cummings <mcummings@gentoo.org> PDL-2.4.3-r1.ebuild:
  Marking amd64 stable

  01 Jun 2007; Joshua Kinard <kumba@gentoo.org> PDL-2.4.3.ebuild:
  Stable on mips.

  12 May 2007; Joshua Kinard <kumba@gentoo.org> PDL-2.4.3.ebuild:
  Stable on mips.

  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> PDL-2.4.3-r1.ebuild:
  Added ~ppc, bug #165651

  14 Apr 2007; Michael Cummings <mcummings@gentoo.org> PDL-2.4.3.ebuild:
  sparc stable
