@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX PDL-2.4.2-makemakerfix.patch 425 RMD160 dea21a20bbd8a857c59e79472ace63743980f418 SHA1 70b596978e68e2df62628b5c56236caae9f348c4 SHA256 c9abca98e5d046a35f097c8d0ede0cd9a548c1645c02778748efe6388c960db0
 AUX PDL-2.4.3-PIC.patch 358 RMD160 1af7dd94adf4788e7ea7b60633d91283e96e7789 SHA1 1677fa6b4054c46e4cff23d1692469f35435a57a SHA256 603f9a332db839497e0f32f78698264ac32c2dcc997b41036c406b2447ea0ddb
 AUX PDL-2.4.4-PIC.patch 634 RMD160 d11e7661901daf60f77270213d6141f5ea176f14 SHA1 c54ece3ccb8fc2e3d7509b2e3d53a68677af6e2a SHA256 df6f9f98bec340ce55b89cb27184ce63b2d4d932f33a50f9f0461ce598386276
@@ -8,6 +11,13 @@ DIST PDL-2.4.4.tar.gz 2341784 RMD160 304b55b8eb46e14d57a09c613f0c0af227d6fdb3 SH
 EBUILD PDL-2.4.2-r1.ebuild 2603 RMD160 487c6402665ca9a956e02473e8777ef6c4a3bbb5 SHA1 073adb0ed50a468d3ee4e1bde146b2ae1c5c8801 SHA256 ec76325b4d748098e71cdf97accd71ca122cb2199d778e0649089b29e5f9d438
 EBUILD PDL-2.4.3-r1.ebuild 2810 RMD160 28c85d8fdd2e534acdff6f58f9874f32b0723ab3 SHA1 61412047597a6229b9d49307307f970a6b7f88c8 SHA256 7718c42b0c6045cd85a9f28ad575718b14bd57f4948276f7a55eddad35588d33
 EBUILD PDL-2.4.3.ebuild 2643 RMD160 81d3bb953f1478dc1d61c040fd22d0c0c0921a54 SHA1 ee0a55f4000b29072c1827826cdb2ee39703d4a6 SHA256 555f4de5e3243ebfa4d3fa3e6bd64e9dad734e2ed7410dd71a8753cdc9740fa6
-EBUILD PDL-2.4.4.ebuild 2744 RMD160 8a87d47a47eef5aa5b120416687798a991b60cca SHA1 7ee3784728e6b8347299f024f6ab0a357dbacfa0 SHA256 b6741a8fd34725ea3ec2591e2b813ebbcc7244130d68f4666a681202f3438d5b
-MISC ChangeLog 9740 RMD160 c6d1f47e636c5ffb0a6c68d9fb048e162e26d7f6 SHA1 43a5d88aa7678f4b3640c6e344632b2c9672f4a1 SHA256 730b73a6f547d268c1436655c8a09d173ded2236b1f0df72a155a6db9ce790f4
+EBUILD PDL-2.4.4.ebuild 2967 RMD160 dfe81aa6ebb0ddb30b3bfd12d0d7c6563860ebf0 SHA1 3180816dbfdf7610ba19e9505ee072a7cc72c8bb SHA256 1b7ca3454188f26139c078b5f0a8d30647a453ad3804f0dd087426fbff09a3c3
+MISC ChangeLog 9878 RMD160 413cb28c4ab9c63d6fd0fcc43185f4f0102e16a1 SHA1 c0e14feae5c5747d1fa42740d12e1e319ccf0136 SHA256 a934c975a0f015b8fc402a90d996b85cf1f2b5dffd9f6c9fc7bae85587fe0398
 MISC metadata.xml 334 RMD160 17f02229e030ae58f2e8a6441af1596e0328f041 SHA1 0675a8aa5ea1ec9cfb08d7b9f515799c898870bc SHA256 fd47745c623c750430899ef615dcf3fe9b24f723e9c48f1a9207285d1ad208d2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.10 (GNU/Linux)
+
+iEYEARECAAYFAknuC5AACgkQV3J2n04Eaux+dACggRU68y8spKmCrYoId33n2Uf7
+97EAnRLNVrNAwLCqYB1g8U0y4RlWxQ8k
+=aT0W
+-----END PGP SIGNATURE-----
