@@ -1,6 +1,8 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PDL/PDL-2.4.4.ebuild,v 1.3 2009/01/01 18:54:31 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PDL/PDL-2.4.4.ebuild,v 1.4 2009/04/21 18:08:03 tove Exp $
+
+EAPI=2
 
 MODULE_AUTHOR=CHM
 inherit perl-module eutils multilib
@@ -10,7 +12,7 @@ DESCRIPTION="PDL Perl Module"
 LICENSE="Artistic as-is"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~s390 ~sh ~sparc ~x86"
-IUSE="opengl badval gsl"
+IUSE="badval fftw gsl opengl"
 
 DEPEND=">=sys-libs/ncurses-5.2
 	perl-core/Filter
@@ -22,16 +24,13 @@ DEPEND=">=sys-libs/ncurses-5.2
 	opengl? ( virtual/opengl virtual/glu )
 	dev-perl/Term-ReadLine-Perl
 	gsl? ( sci-libs/gsl )
-	>=sys-apps/sed-4"
+	fftw? ( sci-libs/fftw:2.1 )"
 
 mydoc="DEPENDENCIES DEVELOPMENT MANIFEST* Release_Notes TODO"
 
 #SRC_TEST="do"
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-
+src_prepare() {
 	epatch "${FILESDIR}/PDL-2.4.2-makemakerfix.patch"
 
 	# Unconditional -fPIC for the lib (#55238, #180807, #250335)
@@ -56,6 +55,12 @@ src_unpack() {
 	else
 		sed -i -e "s:WITH_GSL => undef:WITH_GSL => 0:" "${S}/perldl.conf"
 	fi
+	# Turn off FFTW automagic too:
+	if use fftw ; then
+		sed -i -e "s:WITH_FFTW => undef:WITH_FFTW => 1:" "${S}/perldl.conf"
+	else
+		sed -i -e "s:WITH_FFTW => undef:WITH_FFTW => 0:" "${S}/perldl.conf"
+	fi
 }
 
 src_install() {
@@ -65,17 +70,17 @@ src_install() {
 	PERLVERSION=${version}
 	eval `perl '-V:archname'`
 	ARCHVERSION=${archname}
-	mv ${D}/usr/$(get_libdir)/perl5/vendor_perl/${PERLVERSION}/${ARCHVERSION}/PDL/HtmlDocs/PDL \
-		${D}/usr/share/doc/${PF}/html
+	mv "${D}"/usr/$(get_libdir)/perl5/vendor_perl/${PERLVERSION}/${ARCHVERSION}/PDL/HtmlDocs/PDL \
+		"${D}"/usr/share/doc/${PF}/html
 
 	mydir=${D}/usr/share/doc/${PF}/html/PDL
 
-	for i in ${mydir}/* ${mydir}/IO/* ${mydir}/Fit/* ${mydir}/Pod/* ${mydir}/Graphics/*
+	for i in "${mydir}"/* "${mydir}"/IO/* "${mydir}"/Fit/* "${mydir}"/Pod/* "${mydir}"/Graphics/*
 	do
-		dosed ${i/${D}}
+		dosed "${i/${D}}"
 	done
-	cp ${S}/Doc/scantree.pl ${D}/usr/$(get_libdir)/perl5/vendor_perl/${PERLVERSION}/${ARCHVERSION}/PDL/Doc/
-	cp ${S}/Doc/mkhtmldoc.pl ${D}/usr/$(get_libdir)/perl5/vendor_perl/${PERLVERSION}/${ARCHVERSION}/PDL/Doc/
+	cp "${S}"/Doc/scantree.pl "${D}"/usr/$(get_libdir)/perl5/vendor_perl/${PERLVERSION}/${ARCHVERSION}/PDL/Doc/
+	cp "${S}"/Doc/mkhtmldoc.pl "${D}"/usr/$(get_libdir)/perl5/vendor_perl/${PERLVERSION}/${ARCHVERSION}/PDL/Doc/
 }
 
 pkg_postinst() {
